...
  }

  Widget _unlock() => SafeArea(
        child: Align(
            alignment: Alignment.centerRight,
            child: IconButton.filledTonal(
              tooltip: 'Unlock player',
              icon: const Icon(Icons.lock_rounded),
              onPressed: () => _setLocked(false),
            )),
      );

  Widget _controls(ZvPlayerState state, EngineCapabilities capabilities) =>
...
